added crowdinvalidation marks to map;  tried to improve map load time

--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -218,7 +218,7 @@ function removeMe(){
 
 
 
-    {% block body_scripts %}
+    {% block end_body %}
     <script src="{% static "tigamap/jquery-1.11.1.min.js" %}"></script>
 
     <script src="{% static "tigamap/bootstrap-3.1.1-dist/js/bootstrap.min.js" %}"></script>
