images fixed in expert validation

--- a/tigacrafting/templates/tigacrafting/expert_validation.html
+++ b/tigacrafting/templates/tigacrafting/expert_validation.html
@@ -144,7 +144,7 @@
 
                 <div class="col-md-5">
 
-                    {{ form.instance.task.photo_image | safe}}
+                    {{ form.instance.task.photo.medium_image_ | safe}}
 
                 </div>
 
