hiding value_changed in expert validation before document ready

--- a/tigacrafting/templates/tigacrafting/expert_validation.html
+++ b/tigacrafting/templates/tigacrafting/expert_validation.html
@@ -237,6 +237,9 @@
     }
 
 
+    $('input[id~="value_changed"]').hide();
+    $('label[for~="value_changed"]').hide();
+
  $(document).ready(function() {
     $("form").addClass("form-horizontal").attr("role", "form");
 
