--- a/tigacrafting/templates/tigacrafting/expert_validation.html
+++ b/tigacrafting/templates/tigacrafting/expert_validation.html
@@ -98,7 +98,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Menu" %}
                                     <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href={% url 'annotate_tasks' 'new' %}>{% trans "New batch" %}</a></li>
+                                    <li><a href={% url 'annotate_tasks_fifty_new' %}>{% trans "New batch" %}</a></li>
                                     <li><a href={% url 'annotate_tasks' 'noted_only' %}>{% trans "Photos you have taken notes on but not yet scored" %}</a></li>
                                      <li><a href={% url 'annotate_tasks' 'completed' %}>{% trans "Photos you have already scored" %}</a></li>
                                 </ul>
